--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/glew"]
 	path = lib/glew
 	url = https://github.com/omniavinco/glew-cmake
+[submodule "lib/glm"]
+	path = lib/glm
+	url = https://github.com/g-truc/glm
