--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,12 @@ project(ReMania)
 
 set(CMAKE_CXX_STANDARD 20)
 
-find_package(OpenGL 4.0 REQUIRED)
+find_package(OpenGL 4.3 REQUIRED)
 
-add_subdirectory(lib/glew/)
+set(BUILD_SHARED_LIBS ON)
+add_subdirectory(lib/glew)
 add_subdirectory(lib/glfw3)
+add_subdirectory(lib/glm)
 
 file(GLOB_RECURSE TMNF_FILES
         ${CMAKE_SOURCE_DIR}/src/main_app/*.c
@@ -15,5 +17,5 @@ file(GLOB_RECURSE TMNF_FILES
         ${CMAKE_SOURCE_DIR}/src/main_app/*.hpp)
 
 add_executable(ReMania ${TMNF_FILES})
-target_link_libraries(ReMania glfw libglew_static)
-target_include_directories(ReMania PUBLIC lib/glew/include lib/glfw3/include)
+target_link_libraries(ReMania glfw_shared libglew_shared glm_shared)
+target_include_directories(ReMania PUBLIC lib/glew/include lib/glfw3/include lib/glm)
