--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -58,7 +58,7 @@ jobs:
         run: cmake -E make_directory ${{runner.workspace}}/build
 
       - name: Setup OpenGL
-          if: ${{ ${{matrix.config.os}} == "ubuntu-latest" }}
+          if: ${{ $matrix.config.os == "ubuntu-latest" }}
           uses: openrndr/setup-opengl@v1.1
         
 
