--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -58,8 +58,8 @@ jobs:
         run: cmake -E make_directory ${{runner.workspace}}/build
 
       - name: Setup OpenGL
-          if: ${{ $matrix.config.os == "ubuntu-latest" }}
-          uses: openrndr/setup-opengl@v1.1
+        if: matrix.config.os == "ubuntu-latest"
+        uses: openrndr/setup-opengl@v1.1
         
 
       - name: Configure CMake
