--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -58,7 +58,7 @@ jobs:
         run: cmake -E make_directory ${{runner.workspace}}/build
 
       - name: Setup OpenGL
-        if: matrix.config.name == "Ubuntu-GCC" || matrix.config.name == "Ubuntu-Clang
+        if: matrix.config.name == 'Ubuntu-GCC' || matrix.config.name == 'Ubuntu-Clang'
         uses: openrndr/setup-opengl@v1.1
         
 
@@ -70,7 +70,7 @@ jobs:
         # Note the current convention is to use the -S and -B options here to specify source
         # and build directories, but this is only available with CMake 3.13 and higher.
         # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
-        run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DPLATFORM=${{ matrix.config.name }}
+        run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE
 
       - name: Build
         working-directory: ${{runner.workspace}}/build
@@ -89,7 +89,7 @@ jobs:
         uses: actions/upload-artifact@v2.2.0
         with:
           # Artifact name
-          name: EpiSim
+          name: $ {{ matrix.config.artifact }}
           # A file, directory or wildcard pattern that describes what to upload
           path: |
             ${{runner.workspace}}/build/${{ matrix.config.name }}
