--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -59,7 +59,7 @@ jobs:
 
       - name: Setup OpenGL
         if: matrix.config.name == 'Ubuntu-GCC' || matrix.config.name == 'Ubuntu-Clang'
-        run: apt install libglu1-mesa-dev freeglut3-dev mesa-common-dev
+        run: sudo apt install libglu1-mesa-dev freeglut3-dev mesa-common-dev
 
 
       - name: Configure CMake
