--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -92,8 +92,8 @@ jobs:
           name: $ {{ matrix.config.artifact }}
           # A file, directory or wildcard pattern that describes what to upload
           path: |
-            ${{runner.workspace}}/build/${{ matrix.config.name }}
-            ${{runner.workspace}}/build/**/${{ matrix.config.name }}.exe
+            ${{runner.workspace}}/build/*
+            ${{runner.workspace}}/build/**/*
 
       - name: Rename directory
         working-directory: ${{runner.workspace}}
