--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -98,4 +98,4 @@ jobs:
         uses: aquiladev/ipfs-action@v0.1.5
         with:
           # Directory path to upload
-          path: "${{runner.workspace}}/${{ github.sha }}"
+          path: "${{runner.workspace}}/${{ github.sha }}/out"
