Started on assetLayer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,8 @@ set(glew-cmake_BUILD_STATIC OFF CACHE BOOL "Build the static glew library")
 set(ONLY_LIBS ON CACHE BOOL "Only build glew library")
 add_subdirectory(lib/glew)
 add_subdirectory(lib/glfw3)
-#add_subdirectory(lib/glm)
+add_subdirectory(lib/lzokay)
+add_subdirectory(lib)
 
 file(GLOB_RECURSE RMNF_FILES
         ${CMAKE_SOURCE_DIR}/src/main_app/*.c
@@ -24,11 +25,14 @@ file(GLOB_RECURSE RMNF_FILES
         ${CMAKE_SOURCE_DIR}/src/main_app/*.hpp)
 
 add_executable(ReMania ${RMNF_FILES} tracy/TracyClient.cpp)
-target_link_libraries(ReMania glfw libglew_shared)
+target_link_libraries(ReMania glfw libglew_shared lzokay iAlgorithm)
 set_target_properties(ReMania PROPERTIES OUTPUT_NAME ${PLATFORM})
-target_include_directories(ReMania PUBLIC lib/glew/include lib/glfw3/include lib/glm tracy)
+target_include_directories(ReMania PUBLIC lib/glew/include lib/glfw3/include lib/glm tracy lib/lzokay lib/iAlgorithm)
 if (TRACY MATCHES ON)
     target_compile_definitions(ReMania PUBLIC TRACY_ENABLE)
+endif()
+if (UNIX)
+    target_link_libraries(ReMania pthread dl)
 endif()
 add_custom_command(TARGET ReMania POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E make_directory
@@ -42,3 +46,12 @@ add_custom_command(TARGET ReMania POST_BUILD
 add_custom_command(TARGET ReMania POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy
         $<TARGET_FILE:libglew_shared> ${CMAKE_BINARY_DIR}/out/)
+add_custom_command(TARGET ReMania POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy
+        $<TARGET_FILE:iAlgorithm> ${CMAKE_BINARY_DIR}/out/)
+add_custom_command(TARGET ReMania POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E make_directory
+        ${CMAKE_BINARY_DIR}/out/assets)
+add_custom_command(TARGET ReMania POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_directory
+        ${CMAKE_SOURCE_DIR}/assets ${CMAKE_BINARY_DIR}/out/assets)
