Stopped using lzokay, since it was causing issues with CI switched it for the real lzo library and started using openssl

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,6 +10,7 @@
 [submodule "tracy"]
 	path = tracy
 	url = https://github.com/wolfpld/tracy.git
-[submodule "lib/lzokay"]
-	path = lib/lzokay
-	url = https://github.com/jackoalan/lzokay
+
+[submodule "lib/lzo"]
+	path = lib/lzo
+	url = https://github.com/nemequ/lzo.git
