--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -87,15 +87,10 @@ jobs:
           path: |
             ${{runner.workspace}}/build/out/*
 
-      - name: Rename directory
-        working-directory: ${{runner.workspace}}
-        shell: bash
-        run: "cp -rv build ${{ github.sha }}"
-
       - name: Upload to IPFS
         # You may pin to the exact commit or the version.
         # uses: aquiladev/ipfs-action@cb917f89640f3d6191713b2419828276940fd4ec
         uses: aquiladev/ipfs-action@v0.1.5
         with:
           # Directory path to upload
-          path: "${{runner.workspace}}/${{ github.sha }}/out"
+          path: "${{runner.workspace}}/build/out"
