--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,15 +19,10 @@ jobs:
       matrix:
         config:
           - {
-            name: "Windows-MSVC", artifact: "Windows-MSVC.tar.xz",
+            name: "Windows", artifact: "Windows.tar.xz",
             os: windows-latest,
             build_type: "Release", cc: "cl", cxx: "cl",
             environment_script: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build/vcvars64.bat"
-          }
-          - {
-            name: "Windows-MinGW", artifact: "Windows-MinGW.tar.xz",
-            os: windows-latest,
-            build_type: "Release", cc: "gcc", cxx: "g++"
           }
           - {
             name: "Ubuntu-GCC", artifact: "Linux-GCC.tar.xz",
@@ -37,11 +32,6 @@ jobs:
           - {
             name: "Ubuntu-Clang", artifact: "Linux-Clang.tar.xz",
             os: ubuntu-latest,
-            build_type: "Release", cc: "clang", cxx: "clang++"
-          }
-          - {
-            name: "macOS-Clang", artifact: "macOS-Clang.tar.xz",
-            os: macos-latest,
             build_type: "Release", cc: "clang", cxx: "clang++"
           }
 
