Added (non working) key extraction code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,26 +3,31 @@ project(ReMania)
 
 set(CMAKE_CXX_STANDARD 20)
 
+# Find OpenGL
 find_package(OpenGL 4.3 REQUIRED)
 
+# Get OpenSSL
 add_subdirectory(lib/openssl-cmake)
 
+# Options/Overrides for libraries (eg only building shared libraries)
 option(TRACY "Enables the Tracy profiler support" OFF)
-
-set(PLATFORM "ReMania-NF" CACHE STRING "Platform selection (affects output executable name, used for CI artifacts)")
-
 set(BUILD_SHARED_LIBS ON CACHE BOOL "Build the shared glfw library")
 set(glew-cmake_BUILD_SHARED ON CACHE BOOL "Build the shared glew library")
 set(glew-cmake_BUILD_STATIC OFF CACHE BOOL "Build the static glew library")
 set(ONLY_LIBS ON CACHE BOOL "Only build glew library")
+set(ENABLE_STATIC OFF CACHE BOOL "Build static LZO library.")
+set(ENABLE_SHARED ON CACHE BOOL "Build shared LZO library.")
+
+# Configure all the libs
 add_subdirectory(lib/glew)
 add_subdirectory(lib/glfw3)
+add_subdirectory(lib/lzo)
 
 set(PREFIX src/main_app)
 add_executable(ReMania ${PREFIX}/assetLayer.cpp ${PREFIX}/engine.cpp ${PREFIX}/glLayer.cpp ${PREFIX}/main.cpp ${PREFIX}/utils.cpp tracy/TracyClient.cpp)
 target_link_libraries(ReMania glfw libglew_shared crypto)
 set_target_properties(ReMania PROPERTIES OUTPUT_NAME ${PLATFORM})
-target_include_directories(ReMania PUBLIC lib/glew/include lib/glfw3/include lib/glm tracy)
+target_include_directories(ReMania PUBLIC lib/glew/include lib/glfw3/include lib/glm tracy lib/lzo/include)
 if (TRACY MATCHES ON)
     target_compile_definitions(ReMania PUBLIC TRACY_ENABLE)
 endif()
