Added non working tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,18 @@
 cmake_minimum_required(VERSION 3.19)
 project(ReMania)
 
+# Enable tests
+include(CTest)
+
+option(TESTS "Turn tests on" ON)
+
+set(A A)
+
+if (TESTS MATCHES ON)
+    enable_testing()
+    include(tests/tests.cmake)
+endif()
+
 set(CMAKE_CXX_STANDARD 20)
 
 # Find OpenGL
