--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -83,7 +83,7 @@ jobs:
         run: sudo apt-get install libc6-armel-cross libc6-dev-armel-cross binutils-arm-linux-gnueabi libncurses5-dev build-essential bison flex libssl-dev bc
 
       - name: Setup OpenGL
-        if: marrix.config.os == ubuntu-latest
+        if: matrix.config.os == ubuntu-latest
         run: sudo apt install libglu1-mesa-dev freeglut3-dev mesa-common-dev libxrandr-dev xorg-dev
 
       - name: Configure CMake
