Add endian awareness get_name may still not work tho

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.11)
 project(ReMania)
 
 option(TESTS "Turn tests on" ON)
@@ -10,9 +10,11 @@ find_package(OpenGL 4.3 REQUIRED)
 find_package(GLEW 1.9)
 find_package(glfw3)
 
+# Detect endian
+include(TestBigEndian)
+TEST_BIG_ENDIAN(IS_BIG_ENDIAN)
+
 # Options/Overrides for libraries (eg only building shared libraries)
-set(TMNF_DOWNLOAD_LOCATION "" CACHE STRING "URL for retrieving the assets")
-set(TMNF_DOWNLOAD_KEY "" CACHE STRING "URL for retrieving the assets")
 option(TRACY "Enables the Tracy profiler support" OFF)
 set(BUILD_SHARED_LIBS ON CACHE BOOL "Build the shared glfw library")
 set(glew-cmake_BUILD_SHARED ON CACHE BOOL "Build the shared glew library")
@@ -43,13 +45,16 @@ endif()
 set(PREFIX src/main_app)
 add_executable(ReMania ${PREFIX}/assetLayer.cpp ${PREFIX}/engine.cpp ${PREFIX}/glLayer.cpp ${PREFIX}/main.cpp ${PREFIX}/utils.cpp tracy/TracyClient.cpp)
 target_link_libraries(ReMania glfw mbedtls ${OPENGL_LIBRARIES})
+if(IS_BIG_ENDIAN)
+        target_compile_definitions(ReMania __BIG_ENDIAN__)
+endif()
 if (NOT GLEW_FOUND)
         target_link_libraries(ReMania libglew_shared)
 else()
         target_link_libraries(ReMania ${GLEW_LIBRARIES})
 endif()
 
-target_include_directories(ReMania PUBLIC lib/glew/include lib/glfw3/include lib/glm tracy lib/lzo/include lib/mbedtls/include)
+target_include_directories(ReMania PUBLIC lib/glew/include lib/glfw3/include lib/glm tracy lib/lzo/include lib/mbedtls/include lib/endian/include())
 if (TRACY MATCHES ON)
     target_compile_definitions(ReMania PUBLIC TRACY_ENABLE)
 endif()
