--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ set(PREFIX src/main_app)
 add_executable(ReMania ${PREFIX}/assetLayer.cpp ${PREFIX}/engine.cpp ${PREFIX}/glLayer.cpp ${PREFIX}/main.cpp ${PREFIX}/utils.cpp tracy/TracyClient.cpp)
 target_link_libraries(ReMania glfw mbedtls ${OPENGL_LIBRARIES})
 if(IS_BIG_ENDIAN)
-        target_compile_definitions(ReMania __BIG_ENDIAN__)
+        target_compile_definitions(ReMania PUBLIC __BIG_ENDIAN__)
 endif()
 if (NOT GLEW_FOUND)
         target_link_libraries(ReMania libglew_shared)
