--- a/.gitmodules
+++ b/.gitmodules
@@ -27,3 +27,6 @@
 	path = lib/mbedtls
 	url = https://github.com/ARMmbed/mbedtls.git
         branch="master"
+[submodule "libs/fsx"]
+	path = libs/fsx
+	url = https://github.com/ProtoByter/FilesystemX
